# MNote

./: .gitignore  CMakeLists.txt  FeaturesToAdd.txt  README.md  main.cpp  mainwindow.cpp
src/: font.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
